# storageprovider-client

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev-tci.txt  requirements-dev.txt  requirements-tci.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: storageprovider_backend.yaml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
storageprovider/: client.py
storageprovider/providers/: AugeiasProvider.py  __init__.py  augeias.py  minio.py
tests/: test_client.py
tests/providers/: test_augeias.py  test_minio.py
