[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "2.8.0"
name = "storageprovider-client"
dynamic = ["readme"]
authors = [
    { name = "Flanders Heritage Agency", email = "ict@onroerenderfgoed.be" },
]
description = "storageprovider client"
requires-python = ">=3.10,<3.13"
keywords = ["web", "wsgi", "pyramid", "SKOS", "thesaurus", "vocabulary"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests==2.32.3"
]

[project.urls]
History = "https://github.com/OnroerendErfgoed/storageprovider-client/blob/master/CHANGES.txt"
Tracker = "https://github.com/OnroerendErfgoed/storageprovider-client/issues"
Source = "https://github.com/OnroerendErfgoed/storageprovider-client"
Documentation = "https://storageprovider-client.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
    "coveralls==4.0.1",
    "flake8==7.1.0",
    "hatchling==1.24.2",
    "mock==5.1.0",
    "pyramid-debugtoolbar==4.12.1",
    "pytest-cov==5.0.0",
    "pytest==8.2.2",
    "sphinx==7.3.7",
    "sphinx_rtd_theme==2.0.0",
    "sphinxcontrib-httpdomain==1.8.1",
    "tempdir==0.7.1",
    "uv==0.1.38",
    "waitress==3.0.0",
    "webtest==3.0.0"
]

[project.entry-points."paste.app_factory"]
main = "storageprovider:main"

##
# Build tool specific
##
[tool.hatch.build.targets.wheel]
# In the wheel we want to have storageprovider in the root as python module.
only-include = [
    "/storageprovider",
]

[tool.hatch.metadata]
# This allows us to use github links as dependencies
allow-direct-references = true
